@@ -1,26 +1,34 @@
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.*;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.Arrays;
 
 public class Main {
-    private static final String IMAGE_PATH = "C:\\Photo\\apimkov.jpg";
+    private static final String IMAGE_PATH = "C:\\Photo\\apimkov.jpeg";
     private static final Integer MAX_SIZE = 1000000;
 
     public static void main(String[] args) throws IOException {
-/*
-        File inputFile = new File(IMAGE_PATH);
-        BufferedImage image = ImageIO.read(inputFile);
-        ByteArrayOutputStream imageStream = new ByteArrayOutputStream();
-        ImageIO.write(image,"jpg", imageStream);
-*/
-        final byte[] bytes = Files.readAllBytes(Paths.get(IMAGE_PATH));
-        if (bytes.length <= MAX_SIZE) {
-            FileUpload fileUpload = new FileUpload();
-            fileUpload.httpUpload(bytes);
+
+        //byte[] bytes = Files.readAllBytes(Paths.get(IMAGE_PATH));
+        FileInputStream fileInputStream = null;
+        try {
+            File file = new File(IMAGE_PATH);
+            fileInputStream = new FileInputStream(file);
+            byte[] bytes = fileInputStream.readAllBytes();
+
+            if (bytes.length <= MAX_SIZE) {
+                FileUpload fileUpload = new FileUpload();
+                fileUpload.httpUpload(bytes);
+            }
         }
+        catch (IOException e) {
+            fileInputStream.close();
+            e.printStackTrace();
+        }
+        finally {
+            fileInputStream.close();
+        }
+
+
     }
     }
 
